force-app/main/default/objects/cgcloud__Product_Category_Share__c/cgcloud__Product_Category_Share__c.object-meta.xml
<CustomObject>
    <description>This business class contains the product categories/brands managed by a user.</description>
    <label>Product Manager</label>
    <nameField>
        <displayFormat>UP-{00000}</displayFormat>
        <label>Product Category Share Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>