force-app/main/default/objects/cgcloud__Product_Category_Share__c/fields/cgcloud__Access__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Access__c</fullName>
    <description>Type of access.</description>
    <label>Access</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Read/Write</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>