force-app/main/default/objects/cgcloud__Product_Category_Share__c/fields/cgcloud__Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the account for which the promotion access rights are defined.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Managers</relationshipLabel>
    <relationshipName>Product_Managers</relationshipName>
    <type>Lookup</type>
</CustomField>