force-app/main/default/objects/cgcloud__Product_Category_Share__c/fields/cgcloud__Active__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active__c</fullName>
    <description>Defines if the current record should be used for the promotion access rights.</description>
    <label>Active</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>ToBeActivated</fullName>
            </value>
            <value>
                <fullName>ToBeDeactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>