force-app/main/default/objects/cgcloud__Product_Category_Share__c/fields/cgcloud__Group__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Group__c</fullName>
    <description>The user group for which the product group rights should be defined.</description>
    <label>Group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>