force-app/main/default/objects/cgcloud__Product_Category_Share__c/fields/cgcloud__User__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the user for which the product group rights should be defined.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Category_Shares</relationshipName>
    <type>Lookup</type>
</CustomField>