force-app/main/default/objects/cgcloud__Product_Category_Share__c/fields/cgcloud__User_Group__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__User_Group__c</fullName>
    <description>The user group for which the product group rights should be defined.</description>
    <label>User Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>