force-app/main/default/objects/cgcloud__Product_Category_Share__c/fields/cgcloud__User_Setting__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__User_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to user setting.</description>
    <label>User Setting</label>
    <referenceTo>cgcloud__User_Setting__c</referenceTo>
    <relationshipLabel>Managed Products</relationshipLabel>
    <relationshipName>Product_Managers</relationshipName>
    <type>Lookup</type>
</CustomField>