force-app/main/default/objects/cgcloud__Product_Category_Share__c/recordTypes/cgcloud__User.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__User</fullName>
    <active>true</active>
    <description>Add User to Product</description>
    <label>User</label>
</RecordType>