force-app/main/default/objects/cgcloud__Product_Category_Share__c/recordTypes/cgcloud__UserGroup.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__UserGroup</fullName>
    <active>true</active>
    <description>Add user group to product</description>
    <label>UserGroup</label>
</RecordType>